# visual-selection

./: ChangeLog.md  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
src/visual_selection/: __init__.py  __main__.py  app.py
visual_selection/: __init__.py  __main__.py  app.py
