[project]
name = "visual-selection"
version = "0.2.1"
description = "A simple illustration of mutation aiding evolution"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=0.40.0",
    "textual-plotext>=0.2.1",
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)" }

[project.scripts]
visual-selection = "visual_selection.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "textual-dev>=1.7.0",
    "pre-commit>=4.2.0",
    "codespell>=2.4.1",
    "mypy>=1.16.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/visual_selection"]
