[metadata]
name = visual-selection
description = A simple illustration of mutation aiding evolution
version = attr: visual_selection.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/visual-selection
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: MIT License
license_files = LICENCE
keywords = evolution, science, example, illustration
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Terminals
    Topic :: Software Development :: Libraries
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/visual-selection/blob/main/README.md
    Source = https://github.com/davep/visual-selection
    Issues = https://github.com/davep/visual-selection/issues
    Discussions = https://github.com/davep/visual-selection/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    textual>=0.40.0
    textual-plotext>=0.1.0
python_requires = >=3.8

[options.package_data]
visual_selection = py.typed

[options.entry_points]
console_scripts =
    visual-selection = visual_selection.__main__:main

### setup.cfg ends here
